objects/Qualifications_Experience__c.object
<CustomObject><fields>
        <fullName>Audit_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For HESA Output</description>
        <label>Audit Log</label>
        <referenceTo>SIS_Audit__c</referenceTo>
        <relationshipLabel>Qualifications &amp; Experiences</relationshipLabel>
        <relationshipName>Qualifications_Experiences</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Audit_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To envoke relevant HESA Flow</description>
        <label>Audit Trigger</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Brief_Description_of_Responsibilities__c</fullName>
        <label>Brief Description of Responsibilities</label>
        <length>1010</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Class_Grade__c</fullName>
        <label>Class/Grade</label>
        <length>200</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Contact__c</fullName>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Qualifications &amp; Experiences</relationshipLabel>
        <relationshipName>Qualifications_Experiences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas, The</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Indian Ocean Territory (BIOT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Virgin Islands [Virgin Islands, British]</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Date_of_Award__c</fullName>
        <label>Date of Award</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <length>200</length>
        <type>Text</type>
    </fields><fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>HESA_Audit__c</fullName>
        <description>Displays TRUE if Record Type = Academic. True records are included in HESA Qualifications trigger flow.</description>
        <formula>RecordType.Name="Academic"</formula>
        <inlineHelpText>Displays TRUE if Record Type = Academic. True records are included in HESA Qualifications trigger flow.</inlineHelpText>
        <label>HESA Audit</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>HESA_Class_Grade__c</fullName>
        <description>Initially for testing</description>
        <label>HESA Class/Grade</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distinction</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Name_of_College_University__c</fullName>
        <label>Name of College/University</label>
        <length>150</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Narrative__c</fullName>
        <description>Removed reference to Language record type as no longer used</description>
        <formula>If (  LEN(  Text(Start_Date__c) &amp;  Name_of_College_University__c &amp;  Qualification__c &amp;  Employer__c &amp;  Position_Held__c ) &lt;= 3, 
   "No Details Provided",
   If ( RecordType.Name  = "Experience", 
      (  Position_Held__c &amp; " at " &amp;  Employer__c &amp; "; started " &amp; Text(Year ( Start_Date__c))), 
      (  Qualification__c &amp; ", " &amp; Left ( Subject__c ,20) &amp; " at " &amp;  Name_of_College_University__c &amp; "; awarded " &amp;  Class_Grade__c &amp; " in " &amp;  Text (Year (Date_of_Award__c)))
      )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a custom generated field from applicants entries to other fields</inlineHelpText>
        <label>Narrative</label>
        <type>Text</type>
    </fields><fields>
        <fullName>New_Upload__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Upload</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Order__c</fullName>
        <description>Used for inline VF component</description>
        <formula>IF ( RecordType.Name = "Academic", 1,
   If ( RecordType.Name = "Professional", 2,
      If ( RecordType.Name = "Experience", 3,
      4)
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Position_Held__c</fullName>
        <label>Position Held</label>
        <length>200</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Qualification__c</fullName>
        <label>Qualification</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>For use in FormAssembly forms, to create a persistent flag for Academic records (&amp; other types) when querying in the form, and then being persistent between orgs (versus IDs). Not that the legacy record types name for Academic records is the longer 'Academic_University_Qualifications'</description>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Checked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>200</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Test_Class_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Class Record</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Test_Record__c</fullName>
        <formula>IF ( Text ( Contact__r.Test_Record__c ) = "Yes", TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Record</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Type_Of_Visa__c</fullName>
        <label>Type Of Visa</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 4 (General)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Tier 4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Part of Application process</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Qualifications &amp; Experience</label><nameField>
        <displayFormat>QE-{0000000}</displayFormat>
        <label>Q&amp;E No</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Qualifications &amp; Experiences</pluralLabel><recordTypeTrackHistory>true</recordTypeTrackHistory><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Narrative__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><listViews>
        <fullName>All_Academic_Records</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Name_of_College_University__c</columns>
        <columns>Qualification__c</columns>
        <columns>Subject__c</columns>
        <columns>Class_Grade__c</columns>
        <columns>Date_of_Award__c</columns>
        <columns>Narrative__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test_Record__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Qualifications_Experience__c.Academic_University_Qualifications</value>
        </filters>
        <label>All Academic Records</label>
    </listViews><listViews>
        <fullName>All_Experience_Records</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Name_of_College_University__c</columns>
        <columns>Qualification__c</columns>
        <columns>Subject__c</columns>
        <columns>Class_Grade__c</columns>
        <columns>Date_of_Award__c</columns>
        <columns>Narrative__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test_Record__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Qualifications_Experience__c.Experience</value>
        </filters>
        <label>All Experience Records</label>
    </listViews><listViews>
        <fullName>All_Professional_Records</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Name_of_College_University__c</columns>
        <columns>Qualification__c</columns>
        <columns>Subject__c</columns>
        <columns>Class_Grade__c</columns>
        <columns>Date_of_Award__c</columns>
        <columns>Narrative__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test_Record__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Qualifications_Experience__c.Professional_Qualifications</value>
        </filters>
        <label>All Professional Records</label>
    </listViews><listViews>
        <fullName>All_not_Test</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Name_of_College_University__c</columns>
        <columns>Qualification__c</columns>
        <columns>Subject__c</columns>
        <columns>Class_Grade__c</columns>
        <columns>Date_of_Award__c</columns>
        <columns>Narrative__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test_Record__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Valid Records</label>
    </listViews><recordTypes>
        <fullName>Academic_University_Qualifications</fullName>
        <active>true</active>
        <description>Select this type for Academic (University) Qualifications &amp; Experience</description>
        <label>Academic</label>
    </recordTypes><recordTypes>
        <fullName>Experience</fullName>
        <active>true</active>
        <description>Select this type for Experience</description>
        <label>Experience</label>
    </recordTypes><recordTypes>
        <fullName>Language_Qualifications</fullName>
        <active>true</active>
        <description>Select this Type for Language Qualifications &amp; Experience</description>
        <label>Language</label>
    </recordTypes><recordTypes>
        <fullName>Professional_Qualifications</fullName>
        <active>true</active>
        <description>Select this type for Professional Qualifications &amp; Experience</description>
        <label>Professional</label>
    </recordTypes></CustomObject>